--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "@workadventure/iframe-api-typings": "^1.18.11",
-    "dotenv": "^16.3.1",
+    "@workadventure/iframe-api-typings": "^1.15.10",
     "typescript": "^4.9.5",
-    "vite": "^4.5.2",
-    "wa-map-optimizer-vite": "^1.1.28"
+    "vite": "^4.3.9",
+    "wa-map-optimizer-vite": "^1.1.15"
   },
   "dependencies": {
-    "@workadventure/scripting-api-extra": "^1.8.1"
+    "@workadventure/scripting-api-extra": "^1.9.1",
+    "dotenv": "^16.4.5"
   }
 }
